--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
-[submodule "lib/Cordova"]
-	path = lib/Cordova
+[submodule "cordova-ios"]
+	path = cordova-ios
 	url = https://github.com/apache/cordova-ios.git
-
+[submodule "lib/cordova-ios"]
+	path = lib/cordova-ios
+	url = https://github.com/apache/cordova-ios.git
